# git-switcher

./: .gitignore  .goreleaser.yml  Cargo.toml  README.md  Readme.md  go.mod  go.sum  main.go
.github/workflows/: release.yml
cmd/: create.go  delete.go  edit.go  list.go  list_test.go  rename.go  root.go  switch.go
src/: main.rs  utils.rs
src/commands/: create.rs  delete.rs  edit.rs  list.rs  mod.rs  rename.rs  root.rs  switch.rs
utils/: utils.go  utils_test.go
